--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,4 +29,4 @@ jobs:
       - name: Run a one-line script
         env: # Set the secret as an input
           super_secret2: ${{ secrets.DEV_KEY }}
-        run: echo $super_secret2
+        run: echo ${{ secrets.DEV_KEY }}
