--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,9 +16,11 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  build_dev:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    environment: 
+      name: development
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -27,7 +29,22 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        env: # Set the secret as an input
-          SUPER_SECRET: ${{ secrets.DEV_KEY }}
+        
         run: |
-          echo "$SUPER_SECRET"
+          echo #DEV_KEY
+          
+  build_stageing:
+    runs-on: ubuntu-latest
+    environment: 
+      name: Staging
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        
+        run: |
+          echo #DEV_KEY
