--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Run a one-line script
         
         run: |
-          echo #DEV_KEY
+          echo ${{ secrets.DEV_KEY }}"
           
   build_stageing:
     runs-on: ubuntu-latest
@@ -47,4 +47,4 @@ jobs:
       - name: Run a one-line script
         
         run: |
-          echo #DEV_KEY
+          echo ${{ secrets.DEV_KEY }}"
