--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,13 +24,12 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - shell: bash
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        
+        shell: bash
         run: |
           echo ${{ secrets.DEV_KEY }}
           
@@ -41,12 +40,11 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - shell: bash
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        
+        shell: bash
         run: |
           echo ${{ secrets.DEV_KEY }}
