--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -54,3 +54,22 @@ jobs:
         shell: bash
         run: |
           echo "i'm at s t a g i n g"
+          
+  build_production:
+    runs-on: ubuntu-latest
+    environment: 
+      name: Staging
+    env:
+      key1: ${{ secrets.NEW_KEY }} 
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        if: ${{ env.key1 }} == 'production'
+        shell: bash
+        run: |
+          echo "i'm at p r o d u c t i o n"
