--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,29 +2,23 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, staging, production ]
   pull_request:
     branches: [ main ]
 
   workflow_dispatch:
 
 jobs:
-  build_dev:
+  build:
     runs-on: ubuntu-latest
+    env:
+      if: github.ref == 'refs/heads/main'
+      env_name: "development"
+      
     environment: 
       name: development
     steps:
       - uses: actions/checkout@v2
       - name: Run a one-line script
         shell: bash
-        run: echo "i'm at d e v e l o p m e n t ${{ secrets.NEW_KEY }} "
-          
-  build_stageing:
-    runs-on: ubuntu-latest
-    environment: 
-      name: Prod
-    steps:
-      - uses: actions/checkout@v2
-      - name: Run a one-line script
-        shell: bash
-        run: echo "i'm at s t a g i n g ${{ secrets.NEW_KEY }} "
+        run: echo "i'm at d e v e l o p m e n t ${{ env.env_name }} "
