--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,4 +22,4 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run a one-line script
         shell: bash
-        run: echo "i'm at ${GITHUB_REF##*/}"
+        run: echo "i'm at ${GITHUB_REF##*/} ${{ secrets.NEW_KEY }}"
